--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity
-                android:name=".MemoRecordActivity">
+        <activity android:name=".CalculatorActivity">
         </activity>
-        <activity android:name=".MemoActivity"
-                  android:label="@string/tool01">
+        <activity android:name=".MemoRecordActivity">
+        </activity>
+        <activity
+                android:name=".MemoActivity"
+                android:label="@string/tool01">
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
